Update join bang the loai va sach